--- a/events.html
+++ b/events.html
@@ -14,6 +14,14 @@
         <button>Submit</button>
     </div>
 
+    <form onclick="alert('form')">
+        FORM
+        <div onclick="alert('div')">
+                DIV 
+            <p onclick="alert('p')">P</p> 
+        </div> 
+</form>
+
     <script>
         var buttonElement = document.querySelector("button");
 
